<resources>
    <string name="hello_user">Здраствуйте,Анастасия</string> <!--  я так понимаю, мы подменять будем имя-->
    <string name="what_kind_of_dish">Что будете готовить сегодня?</string>
    <string name="start_search">Начните поиск</string>
    <string name="popular_recipes">Популярные рецепты</string>
    <string name="more">Ещё...</string>
    <string name="breakfast">Завтрак</string>
    <string name="french_toasts_with_strawberries">Французские тосты с клубникой</string>
    <string name="recommend">Рекомендуем</string>
    <string name="blueberry_muffins">Черничные маффины</string>
    <string name="glazed_salmon">Лосось в глазури</string>
    <string name="search">Поиск</string>
    <string name="my_recipes">Мои рецепты</string>
    <string name="profile">Профиль</string>
    <string name="ingredients">Ингридиенты</string>
    <string name="step_by_step_recipe">Пошаговый рецепт</string>
    <string name="bon_appetite">Приятного аппетита</string>
    <string name="comeback">Вернуться</string>
    <string name="next">Next</string>
    <string name="tv_daily_recipe">Рецепты на каждый день</string>
    <string name="Enter">Войти</string>
    <string name="with_pleasure">Готовим с удовольствием!</string>
    <string name="entry">Вход</string>
    <string name="sign_in">Войдите</string>
    <string name="question_about_registration">Уже зарегистрированы?</string>
    <string name="password">Пароль</string>
    <string name="email">Email</string>
    <string name="name">Имя</string>
    <string name="question_about_password">Забыли пароль?</string>
    <string name="not_registered">Не зерегистрированы?</string>
    <string name="cinnamon_sugar_toast">Тост с корицей и сахаром</string>
    <string name="french_toast_with_strawberries">Французские тосты с клубникой</string>
    <string name="popular_dishes">Популярные блюда</string>
    <string name="start_your_search">Начните поиск</string>
    <string name="question_about_what_will_you_cook">Что будете готовить сегодня?</string>
    <string name="hello">Здраствуйте, User!</string>
    <string name="_10_minutes">10 минут</string>
    <string name="_500_calories">500 калорий</string>

    <string name="step_1">Духовку разогреть до 200°. Палочку ванили разрезать вдоль пополам и ножом соскребсти семена из обеих образованных половинок.</string>
    <string name="step_2">Молоко,ваниль и 40 г сах.пудры довести до кипения,снять с огня,накрыть крышкой и дать настояться 20 мин.</string>
    <string name="registration">Регистрация</string>
    <string name="message_about_wrong_password">Указанный пароль меньше чем&#160;</string>
    <string name="message_about_wrong_name">Указаное имя меньше чем&#160;</string>
    <string name="message_about_wrong_email">Указанный email должен быть иметь @ и быть больше&#160;</string>
    <string name="_120_cal">120 калорий</string>
    <string name="_10min">10мин</string>
    <string name="_1portion">1 порция</string>
    <string name="_135cal">135 калорий</string>
    <string name="_15min">15мин</string>
    <string name="lunch">Обед</string>
    <string name="_280cal">280 калорий</string>
    <string name="_45min">45мин</string>
    <string name="filter">Фильтр</string>
    <string name="calories_title_sb">Калории</string>
    <string name="time_to_cook_sb">Время приготовления</string>
    <string name="number_of_servings_sb">Количество порций</string>
    <string name="apply_btn">Применить</string>
    <string name="rating_sb">Рейтинг</string>
    <string name="drinks_chip">Напитки</string>
    <string name="desserts_chip">Десерты</string>
    <string name="meat_dishes_chip">Мясные блюда</string>
    <string name="main_course_chip">Главное блюдо</string>
    <string name="first_dish_chip">Первое блюдо</string>
    <string name="soups_chip">Супы</string>
    <string name="snacks_chip">Закуски</string>
    <string name="dish_title">Блюдо</string>
    <string name="dinner">Ужин</string>
    <string name="brunch">Поздний завтрак</string>
    <string name="clear_btn">Очистить</string>
    <string name="meal_title">Прием пищи</string>
    <string name="recommend_title">Рекомендуем</string>

    <plurals name="plurals_for_count_of_characters">
        <item quantity="zero">нет символов!</item>
        <item quantity="one">%1$d символ!</item>
        <item quantity="two">%1$d символа!</item>
        <item quantity="few">%1$d символа!</item>
        <item quantity="many">%1$d символов!</item>
        <item quantity="other">%1$d символов!</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="one">%d минута</item>
        <item quantity="other">%d минут</item>
    </plurals>
    <plurals name="calories">
        <item quantity="one">%d калория</item>
        <item quantity="other">%d калориит</item>
    </plurals>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="search_title_menu">Поиск</string>
    <string name="my_recipes_title_menu">Мои рецепты</string>
    <string name="profile_title_menu">Профиль</string>
    <string name="title_activity_detail">DetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>