<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".FullRecipe">

    <ImageButton
        android:id="@+id/ib_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/back" />

    <TextView
        android:id="@+id/tv_type_of_meals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ib_back"
        android:layout_marginLeft="24dp"
        android:text="@string/breakfast"
        android:textColor="@color/blue" />

    <TextView
        android:id="@+id/title_for_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_type_of_meals"
        android:layout_marginLeft="24dp"
        android:text="@string/french_toast_with_strawberries"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />


    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_for_recipe"

        android:layout_marginLeft="24dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="3dp"
        android:progressTint="@color/orange"
        android:rating="2.7"
        android:stepSize="0.1" />

    <ImageView
        android:id="@+id/iv_watch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ratingBar"
        android:layout_marginLeft="24dp"
        android:src="@drawable/ic_watch"
        android:layout_marginTop="16dp"></ImageView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/iv_watch"
        android:layout_marginTop="16dp"
        android:text="@string/_10_minutes"
        android:layout_below="@id/ratingBar"
        android:textColor="@color/dark_grey"/>

    <ImageView
        android:id="@+id/iv_fire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_watch"
        android:layout_marginLeft="24dp"
        android:src="@drawable/ic_fire"
        android:layout_marginTop="16dp"></ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_watch"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@id/iv_fire"
        android:text="@string/_500_calories"
        android:textColor="@color/dark_grey" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_type_of_meals"
        android:layout_marginLeft="90dp"
        android:layout_toRightOf="@id/title_for_recipe"
        android:button="@drawable/favorite_selector" />

    <ImageView
        android:id="@+id/ib_image"
        android:layout_width="206dp"
        android:layout_height="125dp"
        android:layout_below="@id/title_for_recipe"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_french_toasts" />

    <TextView
        android:id="@+id/tx_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ib_image"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"

        android:text="@string/ingredients"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/ib_ingredient1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/tx_ingredients"
        android:layout_marginLeft="16dp"
        android:src="@drawable/ic_spoon" />

    <ImageButton
        android:id="@+id/ib_ingredient2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/tx_ingredients"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@id/ib_ingredient1"
        android:src="@drawable/ic_butter" />

    <ImageButton
        android:id="@+id/ib_ingredient3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/tx_ingredients"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@id/ib_ingredient2"
        android:src="@drawable/ic_eggs" />

    <ImageButton
        android:id="@+id/ib_ingredient4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/tx_ingredients"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@id/ib_ingredient3"
        android:src="@drawable/ic_glasses" />

    <ImageButton
        android:id="@+id/ib_ingredient5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/tx_ingredients"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@id/ib_ingredient4"
        android:src="@drawable/ic_strawberries" />

    <ImageButton
        android:id="@+id/ib_ingredient6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/tx_ingredients"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@id/ib_ingredient5"
        android:src="@drawable/ic_berry" />

    <TextView
        android:id="@+id/tv_step_by_step_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ib_ingredient1"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/step_by_step_recipe"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_step_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_step_by_step_recipe"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/step_1"
        android:textColor="@color/black"

        />

    <TextView
        android:id="@+id/tv_step_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_step_1"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/step_2"
        android:textColor="@color/black" />


    <TextView
        android:id="@+id/tv_bon_appetite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/b_back_2"
        android:layout_centerInParent="true"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/bon_appetite"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_smile"
        android:layout_width="21dp"
        android:layout_height="20dp"
        android:layout_above="@+id/b_back_2"
        android:layout_marginBottom="24dp"
        android:layout_toRightOf="@id/tv_bon_appetite"
        android:src="@drawable/iv_smile" />

    <Button
        android:id="@+id/b_back_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/comeback" />


</RelativeLayout>

