<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="MainActivity">

    <ImageButton
        android:id="@+id/ib_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/menu"
        />

    <ImageButton
        android:id="@+id/ib_ring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_notification" />

    <TextView
        android:id="@+id/tv_hello_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ib_menu"
        android:layout_marginLeft="24dp"
        android:text="@string/hello">

    </TextView>

    <TextView
        android:id="@+id/tv_question_about_cook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_hello_user"
        android:layout_marginLeft="24dp"
        android:text="@string/question_about_what_will_you_cook"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textStyle="bold"></TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_question_about_cook"
        android:hint="@string/start_your_search"
        app:hintTextColor="@color/dark_grey"
        app:startIconDrawable="@drawable/search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_search"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_question_about_cook"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"

        android:src="@drawable/ic_filter" />

    <TextView
        android:id="@+id/tf_popular_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tf_search"
        android:layout_marginLeft="24dp"
        android:text="@string/popular_dishes"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textStyle="bold"></TextView>

    <Button
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tf_search"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="-3dp"
        android:layout_toRightOf="@id/tf_popular_recipe"
        android:text="@string/more"
        android:textColor="@color/orange"
        android:textSize="10sp" />

        <ImageButton
            android:id="@+id/ib_recipe1"
            android:layout_width="144dp"
            android:layout_height="86dp"
            android:layout_below="@id/tf_popular_recipe"
            android:layout_marginLeft="24dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_french_toasts"></ImageButton>

    <TextView
        android:id="@+id/tv_type_of_meals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ib_recipe1"
        android:layout_marginLeft="40dp"
        android:text="@string/breakfast"
        android:textColor="@color/blue"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/tv_title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_type_of_meals"
        android:layout_marginLeft="40dp"
        android:text="@string/french_toast_with_strawberries"
        android:textColor="@color/black"
        android:textSize="12dp" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title1"

        android:layout_marginLeft="40dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="3dp"
        android:progressTint="@color/orange"
        android:rating="2.7"
        android:stepSize="0.1" />

        <ImageButton
            android:id="@+id/ib_recipe2"
            android:layout_width="144dp"
            android:layout_height="86dp"
            android:layout_below="@id/tf_popular_recipe"
            android:layout_alignParentRight="true"
            android:layout_marginRight="24dp"

            android:scaleType="fitCenter"
            android:src="@drawable/ic_toasts_with_cinnamon">

        </ImageButton>

        <TextView
            android:id="@+id/tv_type_of_meals_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ib_recipe2"
            android:layout_marginLeft="265dp"
            android:text="@string/breakfast"
            android:textColor="@color/blue"
            android:textSize="12dp" />
        <TextView
            android:id="@+id/tv_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_type_of_meals_2"
            android:layout_marginLeft="265dp"
            android:text="@string/cinnamon_sugar_toast"
            android:textColor="@color/black"
            android:textSize="12dp" />

        <RatingBar
            android:id="@+id/ratingBar2"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title2"
            android:layout_marginLeft="265dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="3dp"
            android:progressTint="@color/orange"
            android:rating="2.7"
            android:stepSize="0.1" />

</RelativeLayout>