<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cards1_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/middleMarginFromEdge"
        android:layout_marginRight="@dimen/middleMarginFromEdge"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/grey"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="400dp"
            android:layout_height="89dp">


            <ImageView
                android:id="@+id/first_foto_recipe_iv_fragment"
                android:layout_width="75dp"
                android:layout_height="45dp"
                android:layout_marginStart="@dimen/miniMarginFromEdge"
                android:layout_marginTop="@dimen/miniMarginFromEdge"
                android:layout_marginEnd="@dimen/miniMarginFromEdge"
                android:layout_marginBottom="@dimen/miniMarginFromEdge"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_french_toasts" />

            <LinearLayout
                android:id="@+id/description_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/first_foto_recipe_iv_fragment"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/type_of_meals_for_card_tv_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/breakfast"
                    android:textColor="@color/blue"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/title_tv_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/type_of_meals_for_card_tv_fragment"
                    android:layout_marginLeft="5dp"
                    android:text="@string/blueberry_muffins"
                    android:textColor="@color/black"
                    android:textSize="12dp" />

                <LinearLayout
                    android:id="@+id/rating1_cards_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/description_ll">

                    <RatingBar
                        android:id="@+id/ratingBar_cards_rb"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginRight="3dp"
                        android:progressTint="@color/orange"
                        android:rating="2.7"
                        android:stepSize="0.1" />

                    <TextView
                        android:id="@+id/calories_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/rating_ll"
                        android:layout_marginLeft="@dimen/middleMarginFromEdge"
                        android:text="@string/_120_cal"
                        android:textColor="@color/orange"
                        android:textSize="9sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/iform1_cards_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rating1_cards_ll">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/timer3_cards_iv"
                            android:layout_width="15dp"
                            android:layout_height="30dp"
                            android:layout_marginLeft="3dp"
                            android:src="@drawable/ic_baseline_access_time_24" />

                        <TextView
                            android:id="@+id/time_to_cook_tv"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="3dp"
                            android:gravity="center"
                            android:text="@string/_10min"
                            android:textColor="@color/middle_grey"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="60dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/meal3_cards_iv"
                            android:layout_width="15dp"
                            android:layout_height="30dp"
                            android:layout_marginLeft="3dp"
                            android:src="@drawable/ic_baseline_room_service_24" />

                        <TextView
                            android:id="@+id/count_of_portions_tv"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@+id/calories1_tv"
                            android:gravity="center"
                            android:text="@string/_1portion"
                            android:textColor="@color/middle_grey"
                            android:textSize="10sp" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginRight="6dp"
                android:layout_toRightOf="@+id/description_ll">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/be_like_appcb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:button="@drawable/favorite_selector"
                    android:gravity="right" />
            </LinearLayout>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>